# Document-Image-Translator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
api/: README.md  lambda_entrypoint.py  upload_to_s3.sh
src/: lambda_entrypoint.py  main.py
src/models/: intermediate_representation.py  message.py  status.py
src/pipeline/: image_processor.py  image_translator.py  pdf_processor.py  pdf_translator.py
src/utils/: config.yaml  utils.py
src/utils/llm/: _base.py  gemini.py  mistral.py
src/utils/prompts/: __init__.py  schema.json  template.py
tests/: conftest.py  test_image_processor.py  test_image_translator.py  test_intermediate_representation.py  test_lambda_entrypoint.py  test_utils.py
tests/resources/: sample_s3_event_multiple.json  sample_s3_event_single.json  sample_s3_event_two.json  test_config.yaml
tests/resources/responses/: mock_html_response.py  mock_ocr_response.py  mock_translation_response.py
web/document-image-translator/: README.md  package.json
web/document-image-translator/src/app/: globals.css  head.tsx  layout.tsx  page.tsx
web/document-image-translator/src/components/: StatusDisplay.tsx  TranslationViewer.tsx  UploadForm.tsx
web/document-image-translator/src/hooks/: useImageTranslator.ts
web/document-image-translator/src/lib/: api.ts  constants.ts  utils.ts
web/document-image-translator/src/modules/: pollStatus.ts  useImageTranslator.ts
web/document-image-translator/src/providers/: ImageTranslatorProvider.tsx
web/document-image-translator/src/types/: index.ts
(+23 files in other folders)
